refactoring end-stage: compiling and initializing state DONE